Changelog
=========


4.0-dev - (unreleased)
----------------------

* Bug fix: Fix tests for eea.rdfmarshaller
  [ichimdav #4340]

* Change: use dcterm namespace for metadata instead of dc
  [tiberich #4250]

* Cleaned: pyflakes warnings
  [ichimdav #4141]

* Cleaned: pylint violations
  [ichimdav #4140]

* Feature: Added upgrade steps
  [voineali #4392]

* Feature: Plone 4.0.4 compatible release
  [ghicaale #4258]


0.8 - (2011-02-09)
------------------

* Bug fix: skip fields for which the accessor cannot be determined
  [tiberich #3982]


0.7 - (2010-12-16)
------------------

* set surf logging level to CRITICAL to avoid all INFO messages
  [vincisas #3951]


0.6 - (2010-11-10)
------------------

* typo fix for tests
  [vincisas]


0.5 - (2010-09-30)
------------------

* dcterms:hasPart added to folderish content
  [vincisas #3519]

* dcterms:isPartOf added to contained content
  [vincisas #3519]


0.4 (2010-09-06)
----------------

* use accessor to get the value of fields
  [tiberich #3550]

* 'file' added to blacklist as a temporary fix for encode error
  [ghicaale]

* under marshaller.py added temporary fix for: 'tuple' object has no attribute 'replace'
  [ghicaale]

* Silent failure with schema or rdf generation, errors are logged
  [vincisas #3564]

* Schemageneration contains extended fields too
  [vincisas #3577]


0.3 (2010-08-03)
----------------

* blacklist is configurable through ZMI in properties_tool/rdfmarshaller_properties
  [vincisas]

* lowercased dc elements
  [vincisas]

* rdf schema generation from portal type FTIs added
  [vincisas]

* rdf export done with autogenerated schemas and portal type specific namespaces
  [vincisas]

* folderish export added
  [vincisas]

* ATVocabularyManager vocabularies exported as RDF
  [vincisas]


0.2 (2010-06-15)
----------------

* Cleanup and more generic export moved here from eea.soer
  [vincisas]

* Blacklist added
  [vincisas]


0.1 (2010-05-19)
----------------

* Initial release